Initial setup and bio photo

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:            Site Title
+title:            David Robles
 description:      Describe your website.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://localhost:4000
@@ -6,21 +6,21 @@ disqus_shortname:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           David Robles
   avatar:         bio-photo.jpg
-  bio:            "Describe your self."
-  email:          your@email.com
+  bio:            "Software Engineer at Hearsay Social"
+  email:          drobles@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter:        
-  facebook:       
-  github:         
-  stackoverflow: 
-  linkedin:       
-  instagram:      
+  twitter:        davidrobles
+  facebook:       davidrobles
+  github:         davidrobles
+  stackoverflow:  179057/david-robles
+  linkedin:       drobles
+  instagram:      davidrobles 
   lastfm:         
   tumblr: 
   pinterest: 
-  foursquare: 
+  foursquare:     davidrobles
   steam: 
   dribbble: 
   # For Google Authorship https://plus.google.com/authorship
@@ -39,14 +39,14 @@ links:
     url: /about/
   - title: Posts
     url: /posts/
-  - title: Theme Setup
-    url: /theme-setup/
-  - title: Made Mistakes
-    url: http://mademistakes.com
+#  - title: Theme Setup
+#    url: /theme-setup/
+#  - title: Made Mistakes
+#    url: http://mademistakes.com
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/San_Francisco
 future:      true
 pygments:    true
 markdown:    kramdown
